# fastapi-cli

./: .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md  pdm_build.py  pyproject.toml  release-notes.md  requirements-tests.txt  requirements.txt
.github/: labeler.yml
.github/DISCUSSION_TEMPLATE/: questions.yml
.github/ISSUE_TEMPLATE/: config.yml  privileged.yml
.github/workflows/: bump-pre-commit-hooks.yml  create-draft-release.yml  issue-manager.yml  latest-changes.yml  pre-commit.yml  prepare-release.yml  publish.yml  smokeshow.yml  test-redistribute.yml  test.yml  zizmor.yml
fastapi-cli-slim/: README.md
scripts/: format.sh  lint.sh  prepare_release.py  test.sh
src/fastapi_cli/: app.py  cli.py  config.py  discover.py  logging.py  utils.py
src/fastapi_cli/commands/: server.py
src/fastapi_cli/utils/: cli.py
tests/: conftest.py  test_cli.py  test_cli_plugin.py  test_cli_pyproject.py  test_discover.py  test_prepare_release.py  test_requirements.py  test_utils_check_factory.py  test_utils_cli.py  test_utils_default_dir.py  test_utils_default_file.py  test_utils_package.py  test_utils_single_file.py  utils.py
tests/assets/: environment_app.py  factory_create_api.py  factory_create_app.py  log_config.yaml  openapi.json  single_file_api.py  single_file_app.py  single_file_app_with_url_docs_none.py  single_file_app_with_url_docs_set.py  single_file_app_with_url_docs_set_and_root_path.py  single_file_docs.py  single_file_non_app.py  single_file_other.py  with_docs_url_set.py  without_docs_url_none.py  without_docs_url_set.py
tests/assets/broken_package/: utils.py
tests/assets/broken_package/mod/: app.py
tests/assets/default_files/default_api/: api.py
tests/assets/nested_package/package/core/: utils.py
tests/assets/nested_package/package/mod/: __init__.py  api.py  app.py  other.py
tests/assets/package/: __init__.py
tests/assets/package/mod/: factory_api.py  factory_app.py  factory_inherit.py  factory_other.py
tests/assets/plugins/: broken.py  colliding.py  sample.py
tests/assets/projects/bad_configured_app/: app.py  pyproject.toml
tests/assets/projects/configured_app/: pyproject.toml  server.py
tests/assets/projects/configured_app_subtable/: app.py  pyproject.toml
tests/assets/pyproject_config/: my_module.py  pyproject.toml
